# forgeplan

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETENESS-CHECK.md  CONTEXT.md  Cargo.toml  LICENSE  PLAN.md  README.md  README.ru.md  SOURCES.md  SPRINTS.md  TODO.md  VISION.md  deny.toml  dist-workspace.toml  forgeplan-site.pen  install.sh  rr.md  rust-toolchain.toml  skills-lock.json
crates/forgeplan-cli/: Cargo.toml
crates/forgeplan-cli/src/: lib.rs  main.rs  ui.rs
crates/forgeplan-cli/src/commands/: activate.rs  activity.rs  activity_stats.rs  blindspots.rs  blocked.rs  calibrate.rs  calibrate_estimate.rs  capture.rs  ci_assign_id.rs  claim.rs  claims.rs  common.rs  context.rs  coverage.rs  decay.rs  decompose.rs  delete.rs  deprecate.rs  discover.rs  dispatch.rs  drift.rs  embed.rs  estimate.rs  export.rs  fgr.rs  fpf.rs  gaps.rs  generate.rs  get.rs  git_sync.rs  graph.rs  health.rs  import_cmd.rs  ingest.rs  init.rs  journal.rs  link.rs  list.rs  log_cmd.rs  mcp.rs  (+37 more)
crates/forgeplan-cli/templates/: cursorrules.md
crates/forgeplan-cli/tests/: adr_003_invariant.rs  cli_activity.rs  cli_activity_stats.rs  cli_claim.rs  cli_claim_security.rs  cli_claims.rs  cli_commands_sanitize_titles.rs  cli_dispatch.rs  cli_export_security.rs  cli_gitignore.rs  cli_health_sanitize_test.rs  cli_health_strict.rs  cli_hint_slug_aware.rs  cli_ingest.rs  cli_init_perf_stress.rs  cli_init_safety.rs  cli_integration_test.rs  cli_integrity_fix_1c.rs  cli_phase.rs  cli_phase_advance.rs  cli_playbook.rs  cli_plugins.rs  cli_prob_067_id_race.rs  cli_reff_cache_invalidation.rs  cli_reindex_resilience.rs  cli_release.rs  cli_release_notes.rs  cli_resolver_extras.rs  cli_resolver_wiring.rs  cli_restore.rs  cli_tag_security.rs  cli_uncovered_coverage.rs  cli_undo_last.rs  cli_update_title_validation.rs  edge_cases_frontmatter.rs  fpf_rules_check.rs  health_help_test.rs  hint_contract.rs  integration_phase5_ingest.rs  integration_phase5_playbook.rs  (+6 more)
crates/forgeplan-cli/tests/fixtures/mappings/: c4-to-forge-test.yaml
crates/forgeplan-cli/tests/fixtures/playbooks/: brownfield-code-mini.yaml
crates/forgeplan-cli/tests/fixtures/prob_060_stress/: README.md
crates/forgeplan-core/: Cargo.toml
crates/forgeplan-core/src/: error.rs  hints.rs  lib.rs  release_notes.rs
crates/forgeplan-core/src/activity/: mod.rs  query.rs
crates/forgeplan-core/src/artifact/: delta.rs  frontmatter.rs  id_alloc.rs  identity.rs  mod.rs  sanitize.rs  sections.rs  store.rs  types.rs  validation.rs
crates/forgeplan-core/src/changelog/: mod.rs
crates/forgeplan-core/src/claim/: mod.rs
crates/forgeplan-core/src/config/: mod.rs  types.rs
crates/forgeplan-core/src/coverage/: mod.rs
crates/forgeplan-core/src/db/: convert.rs  migrate.rs  mod.rs  schema.rs  store.rs
crates/forgeplan-core/src/depth/: mod.rs
crates/forgeplan-core/src/discover/: mod.rs  protocol.rs  session.rs
crates/forgeplan-core/src/dispatch/: mod.rs
crates/forgeplan-core/src/drift/: mod.rs
crates/forgeplan-core/src/driver/: factory.rs  in_memory.rs  lance.rs  mod.rs  types.rs
crates/forgeplan-core/src/duplicate/: mod.rs
crates/forgeplan-core/src/embed/: mod.rs
crates/forgeplan-core/src/estimate/: calculator.rs  confidence.rs  display.rs  domain.rs  extractor.rs  mod.rs  overrides.rs  scorer.rs  types.rs
crates/forgeplan-core/src/export/: mod.rs
crates/forgeplan-core/src/fpf/: contexts.rs  explore.rs  knowledge.rs  mod.rs
crates/forgeplan-core/src/fpf/core/: adi.rs  config.rs  mod.rs  model.rs  trust.rs
crates/forgeplan-core/src/fpf/ext/: mod.rs  rules.rs
crates/forgeplan-core/src/gaps/: mod.rs
crates/forgeplan-core/src/git/: mod.rs
crates/forgeplan-core/src/graph/: knowledge.rs  mod.rs  topological.rs
crates/forgeplan-core/src/health/: mod.rs
crates/forgeplan-core/src/ingest/: engine.rs  idempotency.rs  mod.rs  sources.rs  template.rs  types.rs
crates/forgeplan-core/src/journal/: mod.rs
crates/forgeplan-core/src/lifecycle/: mod.rs  transitions.rs
crates/forgeplan-core/src/link/: mod.rs
crates/forgeplan-core/src/llm/: capture.rs  decompose.rs  generate.rs  mod.rs  reason.rs  route.rs
crates/forgeplan-core/src/phase/: mod.rs  store.rs
crates/forgeplan-core/src/playbook/: dispatch.rs  executor.rs  journal.rs  loader.rs  mod.rs  types.rs
crates/forgeplan-core/src/playbook/dispatch/: agent_dispatcher.rs  claude_print.rs  command_dispatcher.rs  forgeplan_core_dispatcher.rs  mod.rs  (+4 more)
crates/forgeplan-core/src/plugins/: detection.rs  hints.rs  mod.rs  registry.rs  signals.rs  types.rs
crates/forgeplan-core/src/progress/: mod.rs
crates/forgeplan-core/src/projection/: context.rs  error.rs  mod.rs
crates/forgeplan-core/src/routing/: mod.rs  pipeline.rs  rules.rs  signals.rs  skills.rs
crates/forgeplan-core/src/scan/: detect.rs  discovery.rs  import.rs  mod.rs  status_map.rs
crates/forgeplan-core/src/scoring/: decay.rs  evidence.rs  fgr.rs  mod.rs  reff.rs
crates/forgeplan-core/src/search/: bm25.rs  filter.rs  mod.rs  smart.rs
crates/forgeplan-core/src/session/: mod.rs
crates/forgeplan-core/src/stale/: mod.rs
crates/forgeplan-core/src/status/: derived.rs  mod.rs
crates/forgeplan-core/src/template/: engine.rs  mod.rs
crates/forgeplan-core/src/undo/: mod.rs  restore.rs
crates/forgeplan-core/src/validation/: adversarial.rs  checks.rs  mod.rs  rules.rs
crates/forgeplan-core/src/workspace/: init.rs  lock.rs  mod.rs
crates/forgeplan-core/tests/: driver_test.rs  estimate_pipeline_test.rs  frontmatter_test.rs  health_bench.rs  health_verdict_test.rs  integrity_test.rs  verdict_boundary_test.rs  workspace_test.rs
crates/forgeplan-core/tests/fixtures/: spike-1-c4-scoring.md
crates/forgeplan-mcp/: Cargo.toml
crates/forgeplan-mcp/src/: convert.rs  lib.rs  main.rs  server.rs  types.rs
crates/forgeplan-mcp/tests/: fpf_search_handler.rs  integration_e2e.rs  integration_full_coverage.rs  mcp_new_update_title_validation.rs  server_capabilities.rs  soft_delete_integration.rs  verdict_cli_vs_mcp_consistency_test.rs  verdict_mcp_field_parity_test.rs
crates/forgeplan-mcp/tests/common/: mod.rs
(+956 files in other folders)
