[workspace]
resolver = "2"
members = [
    "crates/forgeplan-core",
    "crates/forgeplan-cli",
    "crates/forgeplan-mcp",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/forgeplan"
description = "Forge your plan — structured artifacts with quality scoring"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
lancedb = "0.27"
arrow = { version = "57", default-features = false }
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
async-trait = "0.1"
