[workspace]
resolver = "2"
members = [
    "crates/forgeplan-core",
    "crates/forgeplan-cli",
    "crates/forgeplan-mcp",
]

[workspace.package]
version = "0.24.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ForgePlan/forgeplan"
homepage = "https://github.com/ForgePlan/forgeplan"
description = "Forge your plan — structured artifacts with quality scoring"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
lancedb = "0.27"
arrow = { version = "57", default-features = false }
arrow-array = "57"
arrow-schema = "57"
futures = "0.3"
async-trait = "0.1"
petgraph = "0.8"
notify = "7"
notify-debouncer-mini = "0.5"
dotenvy = "0.15"
fs2 = "0.4"
schemars = "0.8"
semver = { version = "1", features = ["serde"] }
tera = { version = "1", default-features = false }
walkdir = "2"
globset = "0.4"

[profile.dev]
# Reduce debug section size by ~50% — this avoids `ld` OOM on GitHub-hosted
# runners (16 GB RAM) when linking large workspaces (forgeplan-core +
# forgeplan-cli + forgeplan-mcp + lancedb dependency tree).
#
# `line-tables-only` keeps file:line for backtraces but drops verbose type
# info — sufficient for CI test diagnostics, dev cycle, and debugger use.
# Without this, Phase 5/6 PRs intermittently fail Tests job with
# `collect2: fatal error: ld terminated with signal 7 [Bus error]`.
debug = "line-tables-only"

[profile.release]
strip = true          # strip debug symbols (-16%)
lto = "thin"          # link-time optimization (smaller + faster)
codegen-units = 1     # better optimization (slower build)
opt-level = "z"       # optimize for size (vs "3" = speed)

# The profile that 'dist' will build with (inherits all release optimizations)
[profile.dist]
inherits = "release"
