[package]
name = "forgeplan-cli"
version.workspace = true
edition.workspace = true
description = "CLI for Forgeplan — forge your plan"

[[bin]]
name = "forgeplan"
path = "src/main.rs"

[dependencies]
forgeplan-core = { path = "../forgeplan-core" }
forgeplan-mcp = { path = "../forgeplan-mcp" }
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
serde_yml.workspace = true
serde_json.workspace = true
cliclack = "0.5.2"
console = "0.16.3"
ctrlc = "3.5.2"
dirs = "6.0.0"

[features]
semantic-search = ["forgeplan-core/semantic-search"]

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
serde_json = "1"
