[package]
name = "forgeplan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for Forgeplan — forge your plan from idea to implementation"
keywords = ["project-management", "decision-records", "cli", "methodology", "artifacts"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "forgeplan"
path = "src/main.rs"

[dependencies]
forgeplan-core = { path = "../forgeplan-core", version = "0.14.0" }
forgeplan-mcp = { path = "../forgeplan-mcp", version = "0.14.0" }
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
serde_yml.workspace = true
serde_json.workspace = true
cliclack = "0.5.2"
console = "0.16.3"
ctrlc = "3.5.2"
dirs = "6.0.0"
notify.workspace = true
notify-debouncer-mini.workspace = true
dotenvy.workspace = true

[features]
semantic-search = ["forgeplan-core/semantic-search"]

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
serde_json = "1"
