[package]
name = "forgeplan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for Forgeplan — forge your plan from idea to implementation"
keywords = ["project-management", "decision-records", "cli", "methodology", "artifacts"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "forgeplan"
path = "src/lib.rs"

[[bin]]
name = "forgeplan"
path = "src/main.rs"

[dependencies]
forgeplan-core = { path = "../forgeplan-core", version = "0.30.0" }
forgeplan-mcp = { path = "../forgeplan-mcp", version = "0.30.0" }
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
cliclack = "0.5.2"
console = "0.16.3"
ctrlc = "3.5.2"
dirs = "6.0.0"
notify.workspace = true
notify-debouncer-mini.workspace = true
dotenvy.workspace = true
# [Round 3 Sec FINDING-12] needed for atomic publishes via
# `NamedTempFile::new_in(parent)` in `commands/ci_assign_id.rs` and
# `commands/reconcile_ids.rs` (replaces deterministic `<path>.md.tmp`
# sibling — concurrent runs no longer collide on tmp filenames).
tempfile = "3"

[features]
semantic-search = ["forgeplan-core/semantic-search"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
