[package]
name = "forgeplan-core"
version.workspace = true
edition.workspace = true
description = "Core library for Forgeplan — artifact types, scoring, validation"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
regex = "1"

[dev-dependencies]
tempfile = "3"
