[package]
name = "forgeplan-core"
version.workspace = true
edition.workspace = true
description = "Core library for Forgeplan — artifact types, scoring, validation"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
regex = "1"
tokio.workspace = true
lancedb.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
futures.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile = "3"
