[package]
name = "forgeplan-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for Forgeplan — artifact types, scoring, validation, storage drivers"
keywords = ["project-management", "decision-records", "methodology", "artifacts"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
regex = "1"
tokio.workspace = true
lancedb.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
futures.workspace = true
async-trait.workspace = true
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
pulldown-cmark = "0.13"
petgraph.workspace = true
fastembed = { version = "5", optional = true }
bm25 = { version = "2.3.2", features = ["language_detection"] }
sha2 = "0.10"
tracing = "0.1"
rand = "0.8"
fs2.workspace = true

[features]
default = []
semantic-search = ["fastembed"]

[dev-dependencies]
tempfile = "3"
