[package]
name = "forgeplan-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for Forgeplan — expose artifact tools via Model Context Protocol"
keywords = ["mcp", "model-context-protocol", "project-management", "artifacts"]
categories = ["development-tools"]

[[bin]]
name = "forgeplan-mcp"
path = "src/main.rs"

[lib]
name = "forgeplan_mcp"
path = "src/lib.rs"

[dependencies]
forgeplan-core = { path = "../forgeplan-core", version = "0.13.0" }
rmcp = { version = "1.2", features = ["server", "transport-io"] }
schemars = "0.8"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
semantic-search = ["forgeplan-core/semantic-search"]

[dev-dependencies]
tempfile = "3"
